--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,12 @@
         color: #fff !important;
         border:none !important;
         border: 1px solid #fff !important;
+        float: left;
+        margin-left: 0px;
     }
     .right_div{
-        float:right;
+        float:left;
+        margin-left: 50px;
     }
     .notify-row{
        margin-left: -45px !important;
@@ -43,12 +46,14 @@
     .home_icon{
         float:left;
         color:#fff;
-        margin-right:8px;
+        margin-right:0px;
         margin-top:5px;
     }
     .home_icon:hover{
         color:#fff;
     }
+    
+    
     </style>
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/zabuto_calendar.css' %}">
@@ -78,10 +83,10 @@
 <section id="container" >
 
     <header class="header black-bg">
-        <a href="{% url 'index' %}" class="home_icon" style="float:left"><i class="fa fa-home fa-4x" aria-hidden="true"></i></a>
-        <a href="{% url 'index' %}" class="logo"><b>{{ request.user.retailer_user.retailer.name }}</b></a>
+        <a href="{% url 'index' %}" class="home_icon" style="float:right"><i class="fa fa-home fa-4x" aria-hidden="true"></i></a>
+        <a href="{% url 'index' %}" class="logo" style="float:right"><b>{{ request.user.retailer_user.retailer.name }}</b></a>
         <div class="right_div">
-            <div class="nav notify-row" id="top_menu">
+            <div class="nav notify-row notifin" id="top_menu">
                 {% product_notifications retailer_id=request.user.retailer_user.retailer.id as p_n %}
                 <ul class="nav top-menu">
                     
@@ -121,7 +126,7 @@
                 </ul>
             </div>
             <div class="top-menu">
-                <a tabindex="logout" class="btn btn-primary" href="{% url 'logout' %}" style="margin-top: 12px;">Logout</a>
+                <a tabindex="logout" class="btn btn-primary" href="{% url 'logout' %}" style="margin-top: 12px;">لاگ آوٹ</a>
             </div>
             
         </div>
